few findbugs hints